trying to fix slide animation mobile

--- a/styles/animations.module.scss
+++ b/styles/animations.module.scss
@@ -10,16 +10,8 @@
 }
 
 .slideRight {
-  animation-name: slideRight;
-  animation-fill-mode: both;
-  animation-duration: 500ms;
-  animation-delay: 0ms;
-  animation-iteration-count: 1;
-  -webkit-animation-name: slideRight;
-  -webkit-animation-fill-mode: both;
-  -webkit-animation-duration: 500ms;
-  -webkit-animation-delay: 0ms;
-  -webkit-animation-iteration-count: 1;
+  animation: slideRight 500ms;
+  -webkit-animation: slideRight 500ms;
 }
 
 @keyframes slideRight {
